--- a/note-list/src/Css/index.css
+++ b/note-list/src/Css/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(https://i.gifer.com/4MES.gif);
+  background-size: 100vw 100vh;
 }
 
 code {
